spacing fixes

--- a/css/alona.css
+++ b/css/alona.css
@@ -323,7 +323,6 @@ a {
 }
 
 .icon-box {
-    margin-bottom: 16px;
     font-size: 40px;
 }
 
